Feat: projects difficulty in JSON.

--- a/projects.json
+++ b/projects.json
@@ -4,61 +4,71 @@
             "name": "Password Generator",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Password%20Generator/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Medium"
         },
         {
             "name": "Stop Watch",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Stop%20Watch/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Easy"
         },
         {
             "name": "Dad Jokes",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Dad%20Jokes/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Medium"
         },
         {
             "name": "Color Picker",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Color%20Picker/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Easy"
         },
         {
             "name": "Hidden Search Widget",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Hidden%20Search%20Widget/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Easy"
         },
         {
             "name": "Temperature Converter",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Temperature%20Converter/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Medium"
         },
         {
             "name": "Number Guessing Game",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Number%20Guessing%20Game/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Easy"
         },
         {
             "name": "Accoridan",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Accoridan/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Medium"
         },
         {
             "name": "Expanding Cards",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Expanding%20Cards/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Easy"
         },
         {
             "name": "Counter",
             "description": "",
             "link": "https://alkaison.github.io/Web-Projects/Counter/index.html",
-            "image": "./TicTacToe-2.png"
+            "image": "./TicTacToe-2.png",
+            "level": "Easy"
         }
     ]
 }
